--- a/dbhot.html
+++ b/dbhot.html
@@ -13,6 +13,8 @@
         <h1>第一次提交</h1>
         <h1>短视频功能</h1>
         <h1>聊天功能</h1>
+        <br>
+        <h1>聊天功能（修复bug了）</h1>
     </div>
 </body>
 
