--- a/dbhot.html
+++ b/dbhot.html
@@ -14,7 +14,7 @@
         <h1>短视频功能</h1>
         <h1>聊天功能</h1>
         <br>
-        <h1>聊天功能（修复bug了）</h1>
+        <h1>聊天功能[修复bug了]Ohhhh</h1>
     </div>
 </body>
 
