商城功能开发完毕 C6

--- a/dbhot.html
+++ b/dbhot.html
@@ -14,7 +14,7 @@
         <h1>短视频功能</h1>
         <h1>聊天功能</h1>
         <br>
-        <h1>商城开发了50%</h1>
+        <h1>商城开发完100%</h1>
     </div>
 </body>
 
